--- a/dingo/res/layout/barbeador.xml
+++ b/dingo/res/layout/barbeador.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout android:layout_width="fill_parent"
+<RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgbarbeador" android:layout_x="114dp" android:layout_y="129dp">
-		
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITBarbeadorTempo"></EditText>
-	<TextView android:layout_width="wrap_content" android:text="Barbeador" android:id="@+id/textView2" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_x="122dp" android:layout_y="6dp"></TextView>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITBarbeadorPotencia" android:layout_width="181dp" android:layout_x="113dp" android:layout_y="114dp">
+	<EditText android:layout_below="@+id/textView2" android:layout_marginTop="16dp" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITBarbeadorTempo" android:layout_alignRight="@+id/EDITBarbeadorPotencia" android:layout_alignLeft="@+id/EDITBarbeadorPotencia"></EditText>
+	<TextView android:layout_alignParentLeft="true" android:layout_marginLeft="3dp" android:layout_below="@+id/EDITBarbeadorTempo" android:layout_marginTop="9dp" android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="126dp"></TextView>
+	<TextView android:layout_alignParentLeft="true" android:layout_marginLeft="1dp" android:layout_below="@+id/EDITBarbeadorPotencia" android:layout_marginTop="10dp" android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="18dp" android:layout_y="186dp"></TextView>
+	<Button android:id="@+id/BTBarbeadorVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITBarbeadorTempo" android:layout_alignBottom="@+id/EDITBarbeadorTempo" android:layout_alignLeft="@+id/textView3"></TextView>
+	<EditText android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/EDITBarbeadorPotencia" android:layout_width="181dp" android:layout_below="@+id/EDITBarbeadorTempo" android:layout_alignLeft="@+id/textView2">
 		<requestFocus></requestFocus>
 	</EditText>
-	<EditText android:layout_height="wrap_content" android:id="@+id/EDITBarbeadorQuant" android:layout_width="181dp" android:layout_x="112dp" android:layout_y="173dp"></EditText>
-	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="126dp"></TextView>
-	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="18dp" android:layout_y="186dp"></TextView>
-	<Button android:id="@+id/BTBarbeadorVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="257dp" android:layout_y="329dp"></Button>
-</AbsoluteLayout>
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITBarbeadorQuant" android:layout_width="181dp" android:layout_below="@+id/EDITBarbeadorPotencia" android:layout_alignLeft="@+id/EDITBarbeadorPotencia" android:layout_alignRight="@+id/EDITBarbeadorPotencia"></EditText>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Barbeador" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
+</RelativeLayout>
