--- a/dingo/res/layout/batedeira.xml
+++ b/dingo/res/layout/batedeira.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout android:layout_width="fill_parent"
+<RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgbatedeira">
-	<TextView android:textColor="#000000" android:id="@+id/textView2" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="Batedeira" android:layout_width="wrap_content" android:layout_x="108dp" android:layout_y="8dp"></TextView>
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITBatedeiraTempo"></EditText>
-	<EditText android:layout_height="wrap_content" android:id="@+id/EDITBatedeiraPotencia" android:layout_width="181dp" android:layout_x="110dp" android:layout_y="109dp"></EditText>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITBatedeiraQuant" android:layout_width="181dp" android:layout_x="110dp" android:layout_y="168dp">
+	<EditText android:layout_toRightOf="@+id/textView1" android:layout_marginLeft="1dp" android:layout_below="@+id/textView2" android:layout_marginTop="14dp" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITBatedeiraTempo"></EditText>
+	<TextView android:layout_alignParentLeft="true" android:layout_marginLeft="3dp" android:layout_below="@+id/EDITBatedeiraPotencia" android:layout_marginTop="12dp" android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="184dp"></TextView>
+	<TextView android:layout_alignParentLeft="true" android:layout_marginLeft="3dp" android:layout_below="@+id/EDITBatedeiraTempo" android:layout_marginTop="12dp" android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="20dp" android:layout_y="125dp"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Batedeira" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
+	<Button android:id="@+id/BTBatedeiraVoltar" android:text="Voltar" android:layout_height="wrap_content" android:textColor="#000000" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITBatedeiraTempo" android:layout_alignBottom="@+id/EDITBatedeiraTempo" android:layout_alignParentLeft="true"></TextView>
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITBatedeiraPotencia" android:layout_width="181dp" android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/EDITBatedeiraTempo">
 		<requestFocus></requestFocus>
 	</EditText>
-	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="184dp"></TextView>
-	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="20dp" android:layout_y="125dp"></TextView>
-	<Button android:id="@+id/BTBatedeiraVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:layout_x="256dp" android:layout_y="328dp"></Button>
-</AbsoluteLayout>
+	<EditText android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/EDITBatedeiraQuant" android:layout_width="181dp" android:layout_alignBaseline="@+id/textView3" android:layout_alignBottom="@+id/textView3" android:layout_alignLeft="@+id/EDITBatedeiraPotencia"></EditText>
+</RelativeLayout>
