--- a/dingo/res/layout/chuveiro.xml
+++ b/dingo/res/layout/chuveiro.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout android:layout_width="fill_parent"
+<RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgchuveiro" android:layout_x="114dp" android:layout_y="129dp">
-		
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITChuveiroTempo"></EditText>
-	<TextView android:layout_width="wrap_content" android:text="Chuveiro" android:id="@+id/textView2" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_x="122dp" android:layout_y="6dp"></TextView>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITChuveiroPotencia" android:layout_width="181dp" android:layout_x="113dp" android:layout_y="116dp">
-	</EditText>
-	<EditText android:layout_height="wrap_content" android:id="@+id/EDITChuveiroQuant" android:layout_width="181dp" android:layout_x="112dp" android:layout_y="176dp"></EditText>
-	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="17dp" android:layout_y="188dp"></TextView>
-	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="20dp" android:layout_y="129dp"></TextView>
-	<Button android:id="@+id/BTChuveiroVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="246dp" android:layout_y="322dp"></Button>
-</AbsoluteLayout>
+	<EditText android:layout_below="@+id/textView2" android:layout_marginTop="16dp" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITChuveiroTempo" android:layout_alignLeft="@+id/EDITChuveiroPotencia"></EditText>
+	<TextView android:layout_alignParentLeft="true" android:layout_marginLeft="3dp" android:layout_below="@+id/EDITChuveiroTempo" android:layout_marginTop="9dp" android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="20dp" android:layout_y="129dp"></TextView>
+	<Button android:id="@+id/BTChuveiroVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITChuveiroTempo" android:layout_alignBottom="@+id/EDITChuveiroTempo" android:layout_alignParentLeft="true"></TextView>
+	<EditText android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/EDITChuveiroPotencia" android:layout_width="181dp" android:layout_below="@+id/EDITChuveiroTempo" android:layout_alignLeft="@+id/textView2"></EditText>
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITChuveiroQuant" android:layout_width="181dp" android:layout_below="@+id/EDITChuveiroPotencia" android:layout_alignLeft="@+id/textView2" android:layout_alignRight="@+id/EDITChuveiroPotencia"></EditText>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:textColor="#000000" android:text="Quantidade:" android:layout_alignBaseline="@+id/EDITChuveiroQuant" android:layout_alignBottom="@+id/EDITChuveiroQuant" android:layout_alignLeft="@+id/textView1"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Chuveiro" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
+</RelativeLayout>
