--- a/dingo/res/layout/lampada.xml
+++ b/dingo/res/layout/lampada.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout android:layout_width="fill_parent"
+<RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bglampada" android:layout_x="114dp" android:layout_y="129dp">
-		
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITLampadaQuartoTempo"></EditText>
-	<TextView android:layout_width="wrap_content" android:text="Lâmpada" android:id="@+id/textView2" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_x="122dp" android:layout_y="6dp"></TextView>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITLampadaQuartoPotencia" android:layout_width="181dp" android:layout_x="110dp" android:layout_y="113dp">
+	<EditText android:layout_toRightOf="@+id/textView1" android:layout_marginLeft="1dp" android:layout_below="@+id/textView2" android:layout_marginTop="16dp" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITLampadaQuartoTempo"></EditText>
+	<TextView android:layout_alignParentLeft="true" android:layout_marginLeft="3dp" android:layout_below="@+id/EDITLampadaQuartoTempo" android:layout_marginTop="9dp" android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="17dp" android:layout_y="124dp"></TextView>
+	<TextView android:layout_alignLeft="@+id/textView1" android:layout_below="@+id/EDITLampadaQuartoPotencia" android:layout_marginTop="7dp" android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="182dp"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITLampadaQuartoTempo" android:layout_alignBottom="@+id/EDITLampadaQuartoTempo" android:layout_alignParentLeft="true"></TextView>
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITLampadaQuartoQuant" android:layout_width="181dp" android:layout_below="@+id/EDITLampadaQuartoPotencia" android:layout_alignLeft="@+id/EDITLampadaQuartoPotencia">
+		<requestFocus></requestFocus>
 	</EditText>
-	<EditText android:layout_height="wrap_content" android:id="@+id/EDITLampadaQuartoQuant" android:layout_width="181dp" android:layout_x="112dp" android:layout_y="173dp"></EditText>
-	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="17dp" android:layout_y="124dp"></TextView>
-	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="182dp"></TextView>
-	<Button android:id="@+id/BTLampadaQuartoVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="249dp" android:layout_y="322dp"></Button>
-</AbsoluteLayout>
+	<EditText android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/EDITLampadaQuartoPotencia" android:layout_width="181dp" android:layout_below="@+id/EDITLampadaQuartoTempo" android:layout_alignLeft="@+id/EDITLampadaQuartoTempo"></EditText>
+	<Button android:id="@+id/BTLampadaQuartoVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Lâmpada" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
+</RelativeLayout>
