--- a/dingo/res/layout/secador.xml
+++ b/dingo/res/layout/secador.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout android:layout_width="fill_parent"
+<RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgsecador">
-	<TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITSecadorTempo"></EditText>
-	<TextView android:layout_width="wrap_content" android:text="Secador" android:id="@+id/textView2" android:textColor="#000000" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_x="122dp" android:layout_y="6dp"></TextView>
-	<Button android:id="@+id/BTSecadorVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="253dp" android:layout_y="330dp"></Button>
-	<EditText android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITSecadorPotencia" android:layout_width="181dp" android:layout_x="109dp" android:layout_y="108dp">
+	<EditText android:layout_toRightOf="@+id/textView1" android:layout_marginLeft="2dp" android:layout_below="@+id/textView2" android:layout_marginTop="16dp" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITSecadorTempo"></EditText>
+	<EditText android:layout_toRightOf="@+id/textView1" android:layout_marginLeft="1dp" android:layout_below="@+id/EDITSecadorTempo" android:layout_marginTop="5dp" android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/EDITSecadorPotencia" android:layout_width="181dp" android:layout_x="109dp" android:layout_y="108dp">
 		<requestFocus></requestFocus>
 	</EditText>
-	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="34dp" android:layout_y="122dp"></TextView>
-	<EditText android:layout_height="wrap_content" android:id="@+id/EDITSecadorQuant" android:layout_width="181dp" android:layout_x="109dp" android:layout_y="162dp"></EditText>
-	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="24dp" android:layout_y="174dp"></TextView>
-</AbsoluteLayout>
+	<EditText android:layout_alignLeft="@+id/EDITSecadorPotencia" android:layout_below="@+id/EDITSecadorPotencia" android:layout_marginTop="4dp" android:layout_height="wrap_content" android:id="@+id/EDITSecadorQuant" android:layout_width="181dp" android:layout_x="109dp" android:layout_y="162dp"></EditText>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Potência:" android:layout_alignBaseline="@+id/EDITSecadorPotencia" android:layout_alignBottom="@+id/EDITSecadorPotencia" android:layout_alignParentLeft="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:textColor="#000000" android:text="Quantidade:" android:layout_alignBaseline="@+id/EDITSecadorQuant" android:layout_alignBottom="@+id/EDITSecadorQuant" android:layout_alignParentLeft="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITSecadorTempo" android:layout_alignBottom="@+id/EDITSecadorTempo" android:layout_alignParentLeft="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Secador" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
+	<Button android:id="@+id/BTSecadorVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+</RelativeLayout>
