--- a/dingo/res/layout/som.xml
+++ b/dingo/res/layout/som.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout android:layout_width="fill_parent"
+<RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgsom2">
-	<TextView   android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<EditText android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITSomTempo"></EditText>
-	<TextView android:id="@+id/textView2" android:textColor="#000000" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="Som" android:layout_width="wrap_content" android:layout_x="138dp" android:layout_y="6dp"></TextView>
-	<Button android:id="@+id/BTSomVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="250dp" android:layout_y="324dp"></Button>
-	<EditText android:layout_height="wrap_content" android:id="@+id/EDITSomQuant" android:layout_width="181dp" android:layout_x="106dp" android:layout_y="162dp"></EditText>
-	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="22dp" android:layout_y="173dp"></TextView>
-	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="34dp" android:layout_y="122dp"></TextView>
-	<EditText android:layout_height="wrap_content" android:id="@+id/EDITSomPotencia" android:layout_width="181dp" android:layout_x="108dp" android:layout_y="106dp"></EditText>
-</AbsoluteLayout>
+	<EditText android:layout_toRightOf="@+id/textView1" android:layout_marginLeft="2dp" android:layout_below="@+id/textView2" android:layout_marginTop="16dp" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITSomTempo"></EditText>
+	<Button android:id="@+id/BTSomVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Som" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Potência:" android:layout_alignBaseline="@+id/EDITSomPotencia" android:layout_alignBottom="@+id/EDITSomPotencia" android:layout_alignParentLeft="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:textColor="#000000" android:text="Quantidade:" android:layout_alignBaseline="@+id/EDITSomQuant" android:layout_alignBottom="@+id/EDITSomQuant" android:layout_alignParentLeft="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITSomTempo" android:layout_alignBottom="@+id/EDITSomTempo" android:layout_alignParentLeft="true"></TextView>
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITSomPotencia" android:layout_width="181dp" android:layout_below="@+id/EDITSomTempo" android:layout_alignLeft="@+id/EDITSomTempo"></EditText>
+	<EditText android:layout_height="wrap_content" android:id="@+id/EDITSomQuant" android:layout_width="181dp" android:layout_below="@+id/EDITSomPotencia" android:layout_toRightOf="@+id/textView1">
+		<requestFocus></requestFocus>
+	</EditText>
+</RelativeLayout>
