--- a/dingo/res/layout/tv.xml
+++ b/dingo/res/layout/tv.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout android:layout_width="fill_parent"
+<RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgtv">
-	<TextView  android:textColor="#000000" android:id="@+id/textView2" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="Televisão" android:layout_width="wrap_content" android:layout_x="108dp" android:layout_y="8dp"></TextView>
-	<TextView   android:textColor="#000000" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Tempo de uso:" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="70dp"></TextView>
-	<EditText  android:inputType="number"  android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITTVQuartoTempo"></EditText>
-	<Button android:id="@+id/BTTVQuartoVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="257dp" android:layout_y="326dp"></Button>
-	<EditText android:inputType="number" android:layout_height="wrap_content" android:id="@+id/EDITTVQuartoPotencia" android:layout_width="181dp" android:layout_x="108dp" android:layout_y="112dp">
-		<requestFocus></requestFocus>
-	</EditText>
-	<TextView android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="33dp" android:layout_y="122dp"></TextView>
-	<EditText android:inputType="number" android:layout_height="wrap_content" android:id="@+id/EDITTVQuartoQuant" android:layout_width="181dp" android:layout_x="110dp" android:layout_y="170dp"></EditText>
-	<TextView android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="25dp" android:layout_y="182dp"></TextView>
-</AbsoluteLayout>
+	<EditText android:layout_toRightOf="@+id/textView1" android:layout_marginLeft="1dp" android:layout_below="@+id/textView2" android:layout_marginTop="14dp"  android:inputType="number"  android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITTVQuartoTempo"></EditText>
+	<EditText android:layout_toRightOf="@+id/textView1" android:layout_marginLeft="1dp" android:layout_below="@+id/EDITTVQuartoPotencia" android:layout_marginTop="7dp" android:inputType="number" android:layout_height="wrap_content" android:id="@+id/EDITTVQuartoQuant" android:layout_width="181dp" android:layout_x="110dp" android:layout_y="170dp"></EditText>
+	<Button android:id="@+id/BTTVQuartoVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Potência:" android:layout_alignBaseline="@+id/EDITTVQuartoPotencia" android:layout_alignBottom="@+id/EDITTVQuartoPotencia" android:layout_alignParentLeft="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:textColor="#000000" android:text="Quantidade:" android:layout_alignBaseline="@+id/EDITTVQuartoQuant" android:layout_alignBottom="@+id/EDITTVQuartoQuant" android:layout_alignParentLeft="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITTVQuartoTempo" android:layout_alignBottom="@+id/EDITTVQuartoTempo" android:layout_alignParentLeft="true"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Televisão" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
+	<EditText android:inputType="number" android:layout_height="wrap_content" android:id="@+id/EDITTVQuartoPotencia" android:layout_width="181dp" android:layout_below="@+id/EDITTVQuartoTempo" android:layout_alignLeft="@+id/EDITTVQuartoTempo"></EditText>
+</RelativeLayout>
